--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+spring.jpa.defer-datasource-initialization: true
+spring.sql.init.mode: always
 
 
 # EUREKA
